Readme file is added

--- a/he_conv.yaml
+++ b/he_conv.yaml
@@ -8,21 +8,22 @@ concurrency: 1
 jobLabel:
   - heJob
 pre:
-  - npm install cypress@10 --legacy-peer-deps
-  - npm install cypress@10.0.0 --legacy-peer-deps
+  - npm install cypress@14.3.2 --legacy-peer-deps
+  - npm install cypress@14.3.2 --legacy-peer-deps
 cacheKey: '{{ checksum "package.lock.json" }}'
 cacheDirectories:
   - node_modules
   - cypressCache
 env:
   CYPRESS_CACHE_FOLDER: cypressCache
-  HYPEREXECUTE_CUSTOM_BUILD: Run Cypress Tests
+  HYPEREXECUTE_CUSTOM_BUILD: cypress headless tests 2
 matrix:
   browser:
     - Chrome-latest
     - Firefox-latest
   test:
     - cypress/e2e/display_visibility.cy.js
+    - cypress/e2e/form_input.cy.js
     - cypress/e2e/home_carousel.cy.js
     - cypress/e2e/mock_carousel.cy.js
     - cypress/e2e/swiper-items.cy.js
@@ -32,7 +33,7 @@ testSuites:
   - npx cypress run --browser=$browser --headed --config video=false --spec $test
 cypressOps:
   DedicatedProxy: false
-  Build: Run Cypress Tests
+  Build: cypress headless tests 2
   BuildTags: []
   Tags: []
   Network: false
